force-app/main/default/objects/Magicplan_Project__c/Magicplan_Project__c.object-meta.xml
<CustomObject>
  <label>Magicplan Project</label>
  <pluralLabel>Magicplan Projects</pluralLabel>
  <nameField>
    <type>Text</type>
    <label>Project Name</label>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>