force-app/main/default/objects/Magicplan_Project__c/fields/App_Link__c.field-meta.xml
<CustomField>
    <fullName>App_Link__c</fullName>
    <label>App Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>