force-app/main/default/objects/Magicplan_Project__c/fields/Has_Files__c.field-meta.xml
<CustomField>
  <fullName>Has_Files__c</fullName>
  <label>Has Files</label>
  <type>Checkbox</type>
  <defaultValue>false</defaultValue>
</CustomField>