force-app/main/default/objects/Magicplan_Project__c/fields/Last_Sync__c.field-meta.xml
<CustomField>
  <fullName>Last_Sync__c</fullName>
  <label>Last Sync</label>
  <type>DateTime</type>
</CustomField>