force-app/main/default/objects/Magicplan_Project__c/fields/Magicplan_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Magicplan_Project_Id__c</fullName>
    <externalId>true</externalId>
    <label>Magic Plan Project Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>