force-app/main/default/objects/Magicplan_Project__c/fields/Server_Response__c.field-meta.xml
<CustomField>
  <fullName>Server_Response__c</fullName>
  <label>Server Response</label>
  <type>LongTextArea</type>
  <length>32768</length>
</CustomField>