force-app/main/default/objects/Magicplan_Project__c/fields/Web_Link__c.field-meta.xml
<CustomField>
    <fullName>Web_Link__c</fullName>
    <label>Web Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>